--- a/share/locale/hin-IN.ini
+++ b/share/locale/hin-IN.ini
@@ -9,7 +9,7 @@ InternationalLanguageName=Hindi (India)
 Preferred=utf-8
 
 [HTTP]
-ContentLanguage=hi-HI
+ContentLanguage=hi
 
 [Currency]
 Symbol=Rs
